[gd_scene load_steps=2 format=3 uid="uid://br6dyud2sumq5"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_pkq54"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pkq54")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 75.0
offset_bottom = 60.0

[node name="Pause" type="Button" parent="MarginContainer2"]
layout_mode = 2
text = "Pause"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 325.0
offset_top = -50.5
offset_right = -327.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="main_menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Levels" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Levels"

[node name="resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[connection signal="pressed" from="MarginContainer2/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Levels" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
